src/objects/TSS_Reports_List__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Need for TSS custom links</description>
    <fields>
        <fullName>Agency_Report__c</fullName>
        <label>Agency Report</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Report__c</fullName>
        <label>Comments Report</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_Report__c</fullName>
        <label>Overall Satisfaction Report</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>TSS Reports List</label>
</CustomObject>